--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,44 @@
     <!-- Footer -->
     <footer>
-        <div class="container text-center">
-            <p>Copyright &copy; {{ site.footer }} 20{{ site.time | date: '%y' }}</p>
+    <footer class="entry-footer">
+    </footer><!-- .entry-footer -->
+
+    <div id="sidebar-footer" class="footer-widgets widget-area" role="complementary">
+        <div class="container">
+            <div class="sidebar-column col-md-6">
+                <aside id="sydney_contact_info-3" class="widget sydney_contact_info_widget"><h3 class="widget-title">Contact us</h3><div class="contact-address"><span><i class="fa fa-home"></i></span>Seattle, WA</div><div class="contact-phone"><span><i class="fa fa-phone"></i></span>720-598-2445</div><div class="contact-email"><span><i class="fa fa-envelope"></i></span><a href="mailto:&#112;as&#115;thepie&#99;&#101;&#97;p&#112;&#64;ic&#108;&#111;&#117;&#100;.com">&#112;as&#115;thepie&#99;&#101;&#97;p&#112;&#64;ic&#108;&#111;&#117;&#100;.com</a></div></aside>				</div>
+
+            <div class="sidebar-column col-md-6">
+                <aside id="sow-button-3" class="widget widget_sow-button"><div class="so-widget-sow-button so-widget-sow-button-wire-ae4a1c640739"><div class="ow-button-base ow-button-align-justify">
+                    <a href="#" class=" ow-button-hover" >
+		<span>
+                    </a>
+                </div>
+                </div></aside>				</div>
+
+
+
         </div>
+    </div>
+    <a class="go-top"><i class="fa fa-angle-up"></i></a>
+
+    <footer id="colophon" class="site-footer" role="contentinfo">
+        <div class="site-info container">
+            <a href="http://wordpress.org/">Copyright 2017</a>
+            <span class="sep"> | </span>
+            Pass The Piece		</div><!-- .site-info -->
+    </footer><!-- #colophon -->
+
+
+    <script type='text/javascript' src='http://127.0.0.1:8081/wordpress/wp-content/themes/sydney/js/scripts.js?ver=4.8'></script>
+    <script type='text/javascript' src='http://127.0.0.1:8081/wordpress/wp-content/themes/sydney/js/main.min.js?ver=20170504'></script>
+    <script type='text/javascript' src='http://127.0.0.1:8081/wordpress/wp-content/themes/sydney/js/skip-link-focus-fix.js?ver=20130115'></script>
+    <script type='text/javascript' src='http://127.0.0.1:8081/wordpress/wp-includes/js/wp-embed.min.js?ver=4.8'></script>
+    <script type='text/javascript'>
+        /* <![CDATA[ */
+        var panelsStyles = {"fullContainer":"body"};
+        /* ]]> */
+    </script>
+    <script type='text/javascript' src='http://127.0.0.1:8081/wordpress/wp-content/plugins/siteorigin-panels/inc/../js/styling-259.min.js?ver=2.5.9'></script>
+    <script type="text/javascript">document.body.className = document.body.className.replace("siteorigin-panels-before-js","");</script>
     </footer>
