--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,24 +1,209 @@
+
+<!DOCTYPE html>
+<html lang="en-US">
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-    <meta name="viewport" content="width=device-width">
-    <meta name="description" content="{{ site.description }}">
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="profile" href="http://gmpg.org/xfn/11">
+    <link rel="pingback" href="http://127.0.0.1:8081/wordpress/xmlrpc.php">
 
-    <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-    <link rel="stylesheet" href="{{ "/style.css" | prepend: site.baseurl }}">
+    <title>Pass The Piece |</title>
 
-    <!-- Custom Fonts -->
-    <link rel="stylesheet" href="{{ "/css/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
-    <link href="//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-    <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <!-- All in One SEO Pack 2.3.14.2 by Michael Torbert of Semper Fi Web Design[259,280] -->
+    <meta name="description"  content="iOS App: Coming soon to the App Store! COMMUNITY OF CANNASSEURS 💨 Upload a photo, tag the strain, share reviews, find the best marijuana deals &amp; more! 📱" />
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <link rel="canonical" href="http://127.0.0.1:8081/wordpress/" />
+    <!-- /all in one seo pack -->
+    <link rel='dns-prefetch' href='//fonts.googleapis.com' />
+    <link rel='dns-prefetch' href='//s.w.org' />
+    <link rel="alternate" type="application/rss+xml" title="Pass The Piece &raquo; Feed" href="http://127.0.0.1:8081/wordpress/feed/" />
+    <link rel="alternate" type="application/rss+xml" title="Pass The Piece &raquo; Comments Feed" href="http://127.0.0.1:8081/wordpress/comments/feed/" />
+    <script type="text/javascript">
+        window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/2.3\/72x72\/","ext":".png","svgUrl":"https:\/\/s.w.org\/images\/core\/emoji\/2.3\/svg\/","svgExt":".svg","source":{"concatemoji":"http:\/\/127.0.0.1:8081\/wordpress\/wp-includes\/js\/wp-emoji-release.min.js?ver=4.8"}};
+        !function(a,b,c){function d(a){var b,c,d,e,f=String.fromCharCode;if(!k||!k.fillText)return!1;switch(k.clearRect(0,0,j.width,j.height),k.textBaseline="top",k.font="600 32px Arial",a){case"flag":return k.fillText(f(55356,56826,55356,56819),0,0),b=j.toDataURL(),k.clearRect(0,0,j.width,j.height),k.fillText(f(55356,56826,8203,55356,56819),0,0),c=j.toDataURL(),b===c&&(k.clearRect(0,0,j.width,j.height),k.fillText(f(55356,57332,56128,56423,56128,56418,56128,56421,56128,56430,56128,56423,56128,56447),0,0),b=j.toDataURL(),k.clearRect(0,0,j.width,j.height),k.fillText(f(55356,57332,8203,56128,56423,8203,56128,56418,8203,56128,56421,8203,56128,56430,8203,56128,56423,8203,56128,56447),0,0),c=j.toDataURL(),b!==c);case"emoji4":return k.fillText(f(55358,56794,8205,9794,65039),0,0),d=j.toDataURL(),k.clearRect(0,0,j.width,j.height),k.fillText(f(55358,56794,8203,9794,65039),0,0),e=j.toDataURL(),d!==e}return!1}function e(a){var c=b.createElement("script");c.src=a,c.defer=c.type="text/javascript",b.getElementsByTagName("head")[0].appendChild(c)}var f,g,h,i,j=b.createElement("canvas"),k=j.getContext&&j.getContext("2d");for(i=Array("flag","emoji4"),c.supports={everything:!0,everythingExceptFlag:!0},h=0;h<i.length;h++)c.supports[i[h]]=d(i[h]),c.supports.everything=c.supports.everything&&c.supports[i[h]],"flag"!==i[h]&&(c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&c.supports[i[h]]);c.supports.everythingExceptFlag=c.supports.everythingExceptFlag&&!c.supports.flag,c.DOMReady=!1,c.readyCallback=function(){c.DOMReady=!0},c.supports.everything||(g=function(){c.readyCallback()},b.addEventListener?(b.addEventListener("DOMContentLoaded",g,!1),a.addEventListener("load",g,!1)):(a.attachEvent("onload",g),b.attachEvent("onreadystatechange",function(){"complete"===b.readyState&&c.readyCallback()})),f=c.source||{},f.concatemoji?e(f.concatemoji):f.wpemoji&&f.twemoji&&(e(f.twemoji),e(f.wpemoji)))}(window,document,window._wpemojiSettings);
+    </script>
+    <style type="text/css">
+        img.wp-smiley,
+        img.emoji {
+            display: inline !important;
+            border: none !important;
+            box-shadow: none !important;
+            height: 1em !important;
+            width: 1em !important;
+            margin: 0 .07em !important;
+            vertical-align: -0.1em !important;
+            background: none !important;
+            padding: 0 !important;
+        }
+    </style>
+    <link rel='stylesheet' id='sydney-bootstrap-css'  href='http://127.0.0.1:8081/wordpress/wp-content/themes/sydney/css/bootstrap/bootstrap.min.css?ver=1' type='text/css' media='all' />
+    <link rel='stylesheet' id='pirate_forms_front_styles-css'  href='http://127.0.0.1:8081/wordpress/wp-content/plugins/pirate-forms/public/css/front.css?ver=2.0.1' type='text/css' media='all' />
+    <link rel='stylesheet' id='siteorigin-panels-front-css'  href='http://127.0.0.1:8081/wordpress/wp-content/plugins/siteorigin-panels/inc/../css/front-flex.css?ver=2.5.9' type='text/css' media='all' />
+    <link rel='stylesheet' id='sow-button-base-css'  href='http://127.0.0.1:8081/wordpress/wp-content/plugins/so-widgets-bundle/widgets/button/css/style.css?ver=1.9.5' type='text/css' media='all' />
+    <link rel='stylesheet' id='sow-button-wire-ae4a1c640739-css'  href='http://127.0.0.1:8081/wordpress/wp-content/uploads/siteorigin-widgets/sow-button-wire-ae4a1c640739.css?ver=4.8' type='text/css' media='all' />
+    <link rel='stylesheet' id='sow-image-default-813df796d9b1-css'  href='http://127.0.0.1:8081/wordpress/wp-content/uploads/siteorigin-widgets/sow-image-default-813df796d9b1.css?ver=4.8' type='text/css' media='all' />
+    <link rel='stylesheet' id='sow-button-wire-f94a0f44a242-css'  href='http://127.0.0.1:8081/wordpress/wp-content/uploads/siteorigin-widgets/sow-button-wire-f94a0f44a242.css?ver=4.8' type='text/css' media='all' />
+    <link rel='stylesheet' id='sow-button-wire-f3d719aa71e4-css'  href='http://127.0.0.1:8081/wordpress/wp-content/uploads/siteorigin-widgets/sow-button-wire-f3d719aa71e4.css?ver=4.8' type='text/css' media='all' />
+    <link rel='stylesheet' id='sydney-fonts-css'  href='https://fonts.googleapis.com/css?family=Source+Sans+Pro%3A400%2C400italic%2C600%7CRaleway%3A400%2C500%2C600' type='text/css' media='all' />
+    <link rel='stylesheet' id='sydney-style-css'  href='http://127.0.0.1:8081/wordpress/wp-content/themes/sydney/style.css?ver=20170504' type='text/css' media='all' />
+    <style id='sydney-style-inline-css' type='text/css'>
+        .site-title { font-size:32px; }
+        .site-description { font-size:16px; }
+        #mainnav ul li a { font-size:14px; }
+        h1 { font-size:52px; }
+        h2 { font-size:42px; }
+        h3 { font-size:32px; }
+        h4 { font-size:25px; }
+        h5 { font-size:20px; }
+        h6 { font-size:18px; }
+        body { font-size:14px; }
+        .header-image { background-size:cover;}
+        .header-image { height:300px; }
+        .header-wrap .col-md-4, .header-wrap .col-md-8 { width: 100%; text-align: center;}
+        #mainnav { float: none;}
+        #mainnav li { float: none; display: inline-block;}
+        #mainnav ul ul li { display: block; text-align: left; float:left;}
+        .site-logo, .header-wrap .col-md-4 { margin-bottom: 15px; }
+        .btn-menu { margin: 0 auto; float: none; }
+        .header-wrap .container > .row { display: block; }
+        .widget-area .widget_fp_social a,#mainnav ul li a:hover, .sydney_contact_info_widget span, .roll-team .team-content .name,.roll-team .team-item .team-pop .team-social li:hover a,.roll-infomation li.address:before,.roll-infomation li.phone:before,.roll-infomation li.email:before,.roll-testimonials .name,.roll-button.border,.roll-button:hover,.roll-icon-list .icon i,.roll-icon-list .content h3 a:hover,.roll-icon-box.white .content h3 a,.roll-icon-box .icon i,.roll-icon-box .content h3 a:hover,.switcher-container .switcher-icon a:focus,.go-top:hover,.hentry .meta-post a:hover,#mainnav > ul > li > a.active, #mainnav > ul > li > a:hover, button:hover, input[type="button"]:hover, input[type="reset"]:hover, input[type="submit"]:hover, .text-color, .social-menu-widget a, .social-menu-widget a:hover, .archive .team-social li a, a, h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { color:#538efe}
+        .project-filter li a.active, .project-filter li a:hover,.preloader .pre-bounce1, .preloader .pre-bounce2,.roll-team .team-item .team-pop,.roll-progress .progress-animate,.roll-socials li a:hover,.roll-project .project-item .project-pop,.roll-project .project-filter li.active,.roll-project .project-filter li:hover,.roll-button.light:hover,.roll-button.border:hover,.roll-button,.roll-icon-box.white .icon,.owl-theme .owl-controls .owl-page.active span,.owl-theme .owl-controls.clickable .owl-page:hover span,.go-top,.bottom .socials li:hover a,.sidebar .widget:before,.blog-pagination ul li.active,.blog-pagination ul li:hover a,.content-area .hentry:after,.text-slider .maintitle:after,.error-wrap #search-submit:hover,#mainnav .sub-menu li:hover > a,#mainnav ul li ul:after, button, input[type="button"], input[type="reset"], input[type="submit"], .panel-grid-cell .widget-title:after { background-color:#538efe}
+        .roll-socials li a:hover,.roll-socials li a,.roll-button.light:hover,.roll-button.border,.roll-button,.roll-icon-list .icon,.roll-icon-box .icon,.owl-theme .owl-controls .owl-page span,.comment .comment-detail,.widget-tags .tag-list a:hover,.blog-pagination ul li,.hentry blockquote,.error-wrap #search-submit:hover,textarea:focus,input[type="text"]:focus,input[type="password"]:focus,input[type="datetime"]:focus,input[type="datetime-local"]:focus,input[type="date"]:focus,input[type="month"]:focus,input[type="time"]:focus,input[type="week"]:focus,input[type="number"]:focus,input[type="email"]:focus,input[type="url"]:focus,input[type="search"]:focus,input[type="tel"]:focus,input[type="color"]:focus, button, input[type="button"], input[type="reset"], input[type="submit"], .archive .team-social li a { border-color:#538efe}
+        .site-header.float-header { background-color:rgba(83,142,254,0.9);}
+        @media only screen and (max-width: 1024px) { .site-header { background-color:#538efe;}}
+        .site-title a, .site-title a:hover { color:#ffffff}
+        .site-description { color:#ffffff}
+        #mainnav ul li a, #mainnav ul li::before { color:#ffffff}
+        #mainnav .sub-menu li a { color:#ffffff}
+        #mainnav .sub-menu li a { background:#606060}
+        .text-slider .maintitle, .text-slider .subtitle { color:#ffffff}
+        body { color:#767676}
+        #secondary { background-color:#ffffff}
+        #secondary, #secondary a, #secondary .widget-title { color:#606060}
+        .footer-widgets { background-color:#82d46e}
+        #sidebar-footer,#sidebar-footer a,.footer-widgets .widget-title { color:#606060}
+        .btn-menu { color:#ff654a}
+        #mainnav ul li a:hover { color:#ff654a}
+        .site-footer { background-color:#538efe}
+        .site-footer,.site-footer a { color:#606060}
+        .overlay { background-color:#000000}
+        .page-wrap { padding-top:83px;}
+        .page-wrap { padding-bottom:100px;}
+        @media only screen and (max-width: 1025px) {
+            .mobile-slide {
+                display: block;
+            }
+            .slide-item {
+                background-image: none !important;
+            }
+            .header-slider {
+            }
+            .slide-item {
+                height: auto !important;
+            }
+            .slide-inner {
+                min-height: initial;
+            }
+        }
+
+    </style>
+    <link rel='stylesheet' id='sydney-font-awesome-css'  href='http://127.0.0.1:8081/wordpress/wp-content/themes/sydney/fonts/font-awesome.min.css?ver=4.8' type='text/css' media='all' />
+    <!--[if lte IE 9]>
+    <link rel='stylesheet' id='sydney-ie9-css'  href='http://127.0.0.1:8081/wordpress/wp-content/themes/sydney/css/ie9.css?ver=4.8' type='text/css' media='all' />
     <![endif]-->
 
+    <!-- This site uses the Google Analytics by MonsterInsights plugin v 6.2.0 - https://www.monsterinsights.com/ -->
+    <!-- Normally you will find the Google Analytics tracking code here, but the webmaster disabled your user group. -->
+    <!-- / Google Analytics by MonsterInsights -->
+
+    <script type='text/javascript' src='http://127.0.0.1:8081/wordpress/wp-includes/js/jquery/jquery.js?ver=1.12.4'></script>
+    <script type='text/javascript' src='http://127.0.0.1:8081/wordpress/wp-includes/js/jquery/jquery-migrate.min.js?ver=1.4.1'></script>
+    <script type='text/javascript'>
+        /* <![CDATA[ */
+        var pirateFormsObject = {"errors":""};
+        /* ]]> */
+    </script>
+    <script type='text/javascript' src='http://127.0.0.1:8081/wordpress/wp-content/plugins/pirate-forms/public/js/scripts-general.js?ver=2.0.1'></script>
+    <link rel='https://api.w.org/' href='http://127.0.0.1:8081/wordpress/wp-json/' />
+    <link rel="EditURI" type="application/rsd+xml" title="RSD" href="http://127.0.0.1:8081/wordpress/xmlrpc.php?rsd" />
+    <link rel="wlwmanifest" type="application/wlwmanifest+xml" href="http://127.0.0.1:8081/wordpress/wp-includes/wlwmanifest.xml" />
+    <meta name="generator" content="WordPress 4.8" />
+    <link rel='shortlink' href='http://127.0.0.1:8081/wordpress/' />
+    <link rel="alternate" type="application/json+oembed" href="http://127.0.0.1:8081/wordpress/wp-json/oembed/1.0/embed?url=http%3A%2F%2F127.0.0.1%3A8081%2Fwordpress%2F" />
+    <link rel="alternate" type="text/xml+oembed" href="http://127.0.0.1:8081/wordpress/wp-json/oembed/1.0/embed?url=http%3A%2F%2F127.0.0.1%3A8081%2Fwordpress%2F&#038;format=xml" />
+    <style type="text/css" media="all"
+           id="siteorigin-panels-layouts-head">/* Layout 7 */ #pgc-7-0-0 , #pgc-7-0-1 , #pgc-7-1-0 , #pgc-7-1-1 , #pgc-7-2-0 , #pgc-7-2-1 , #pgc-7-3-0 , #pgc-7-3-1 , #pgc-7-4-0 , #pgc-7-4-1 , #pgc-7-5-0 , #pgc-7-5-1 { width:50%;width:calc(50% - ( 0.5 * 30px ) ) } #pg-7-0 , #pg-7-1 , #pg-7-2 , #pg-7-3 , #pg-7-4 , #pl-7 .so-panel , #pl-7 .so-panel:last-child { margin-bottom:0px } #pg-7-1> .panel-row-style { background-color:#ff654a } #pg-7-1.panel-no-style, #pg-7-1.panel-has-style > .panel-row-style , #pg-7-3.panel-no-style, #pg-7-3.panel-has-style > .panel-row-style , #pg-7-5.panel-no-style, #pg-7-5.panel-has-style > .panel-row-style { -webkit-align-items:flex-start;align-items:flex-start } #pg-7-3> .panel-row-style { background-color:#fe9347 } #pg-7-5> .panel-row-style { background-color:#fac750 } @media (max-width:780px){ #pg-7-0.panel-no-style, #pg-7-0.panel-has-style > .panel-row-style , #pg-7-1.panel-no-style, #pg-7-1.panel-has-style > .panel-row-style , #pg-7-2.panel-no-style, #pg-7-2.panel-has-style > .panel-row-style , #pg-7-3.panel-no-style, #pg-7-3.panel-has-style > .panel-row-style , #pg-7-4.panel-no-style, #pg-7-4.panel-has-style > .panel-row-style , #pg-7-5.panel-no-style, #pg-7-5.panel-has-style > .panel-row-style { -webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column } #pg-7-0 .panel-grid-cell , #pg-7-1 .panel-grid-cell , #pg-7-2 .panel-grid-cell , #pg-7-3 .panel-grid-cell , #pg-7-4 .panel-grid-cell , #pg-7-5 .panel-grid-cell { margin-right:0 } #pg-7-0 .panel-grid-cell , #pg-7-1 .panel-grid-cell , #pg-7-2 .panel-grid-cell , #pg-7-3 .panel-grid-cell , #pg-7-4 .panel-grid-cell , #pg-7-5 .panel-grid-cell { width:100% } #pgc-7-0-0 , #pgc-7-1-0 , #pgc-7-2-0 , #pgc-7-3-0 , #pgc-7-4-0 , #pgc-7-5-0 , #pl-7 .panel-grid .panel-grid-cell-mobile-last { margin-bottom:0px } #pl-7 .panel-grid-cell { padding:0 } #pl-7 .panel-grid .panel-grid-cell-empty { display:none } #panel-7-0-1-0> .panel-widget-style { padding:0px 0px 0px 0px }  } </style><link rel="icon" href="http://127.0.0.1:8081/wordpress/wp-content/uploads/2017/06/cropped-PTPLogo-Emoji-32x32.png" sizes="32x32" />
+    <link rel="icon" href="http://127.0.0.1:8081/wordpress/wp-content/uploads/2017/06/cropped-PTPLogo-Emoji-192x192.png" sizes="192x192" />
+    <link rel="apple-touch-icon-precomposed" href="http://127.0.0.1:8081/wordpress/wp-content/uploads/2017/06/cropped-PTPLogo-Emoji-180x180.png" />
+    <meta name="msapplication-TileImage" content="http://127.0.0.1:8081/wordpress/wp-content/uploads/2017/06/cropped-PTPLogo-Emoji-270x270.png" />
+    <style type="text/css" id="wp-custom-css">
+        /*
+You can add your own CSS here.
+
+Click the help icon above to learn more.
+*/
+
+        .page .entry-header {
+            margin-bottom: 0px;
+            display: none;
+        }
+
+        h1,  h2, h5, h6 {
+            color: #443f3f;
+            font-weight: 600;
+            margin: 10px 0 24px;
+            font-family: "peacerfulday";
+        }
+
+        .page-wrap {
+            padding-bottom: 0px;
+        }
+
+        .so-widget-sow-button-wire-8f89b14d72df .ow-button-base a {
+            -ms-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+            font-size: 1.3em;
+            padding: 1em 2em;
+            background: transparent;
+            border: 2px solid #ff654a;
+            color: #ff654a !important;
+            -webkit-border-radius: 0.5em;
+            -moz-border-radius: 0.5em;
+            border-radius: 0.5em;
+            text-shadow: 0 1px 0 rgba(0, 0, 0, 0.05);
+            transform: translatey(50%);
+        }
+        *, *:before, *:after {
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            box-sizing: content-box;
+        }
+
+        .content-area .hentry {
+            position: relative;
+            padding-top: 0px;
+            padding-bottom: 0px;
+        }
+
+        #pg-7-1.panel-no-style, #pg-7-1.panel-has-style > .panel-row-style, #pg-7-3.panel-no-style, #pg-7-3.panel-has-style > .panel-row-style, #pg-7-5.panel-no-style, #pg-7-5.panel-has-style > .panel-row-style, #pg-7-6.panel-no-style, #pg-7-6.panel-has-style > .panel-row-style {
+            -webkit-align-items: center;
+            align-items: center;
+        }
+
+        .widget-area .widget {
+            position: relative;
+            margin-bottom: 30px;
+            padding-top: 50px;
+            font-family: "peacerfulday";
+            font-size: 20px
+        }
+
+        .entry-content {
+            font-size: 20px;
+        }
+
+    </style>
 </head>
+</html>
