--- a/_includes/about.html
+++ b/_includes/about.html
@@ -49,7 +49,7 @@
             <div class="slides-container">
 
                 <div class="slide-item" style="background-image:url('http://127.0.0.1:8081/wordpress/wp-content/uploads/2017/06/smokegreen80opacity.png');">
-                    <img class="mobile-slide preserve" src="http://127.0.0.1:8081/wordpress/wp-content/uploads/2017/06/smokegreen80opacity.png"/>
+                    <img class="mobile-slide preserve" src="https://anonimag.es/image/JT9s4gM"/>
                     <div class="slide-inner">
                         <div class="contain animated fadeInRightBig text-slider">
                             <h2 class="maintitle">Pass The Piece</h2>
@@ -58,7 +58,7 @@
                         <a href="http://eepurl.com/cdVgzH" class="roll-button button-slider">SUBSCRIBE TO BE NOTIFIED</a>                    </div>
                 </div>
                 <div class="slide-item" style="background-image:url('http://127.0.0.1:8081/wordpress/wp-content/uploads/2017/06/PTPappDummyloginscreen80opacitygreen.jpg');">
-                    <img class="mobile-slide preserve" src="http://127.0.0.1:8081/wordpress/wp-content/uploads/2017/06/PTPappDummyloginscreen80opacitygreen.jpg"/>
+                    <img class="mobile-slide preserve" src="https://anonimag.es/image/JT9s4YA"/>
                     <div class="slide-inner">
                         <div class="contain animated fadeInRightBig text-slider">
                             <h2 class="maintitle">Wanna Test the Beta?</h2>
